--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
                 
             </div>
         </nav>
-        <div class="banner">
+        <div class="banner container">
+            <div class="banner-left">
+                <h2 class="banner-title">ALWAYS <span class="title-color">FRESH <br>FLOWERS</span></h2>
+                <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+
+            <img class="banner-right" src="./assets/hero-flower.png" alt="image of fresh flowers">
 
         </div>
     </header>
