plants section added with responsive

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header class="container">
-        <nav>
+    <header>
+        <nav class="container">
             <div class="logo">
                 <img src="./assets/logo.png" alt="logo">
             </div>
@@ -30,7 +30,7 @@
                 
             </div>
         </nav>
-        <div class="banner container">
+        <div class="banner">
             <div class="banner-left">
                 <h2 class="banner-title">ALWAYS <span class="title-color">FRESH <br>FLOWERS</span></h2>
                 <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
@@ -40,5 +40,67 @@
 
         </div>
     </header>
+
+    <main>
+        <section class="plants container">
+            <div class="plants-text">
+                <h3 class="section-title"><span class="title-color">Our</span> Plants</h3>
+                <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>                
+            </div>
+            <div class="plants-cards">
+                <div class="plants-card">
+                    <img src="./assets/sample-flower-image.png" alt="sample flower image">
+                    <h5 class="card-title">Lily Blossom</h5>
+                    <h5 class="card-price">20 USD</h5>
+                    <button class="primary-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./assets/sample-flower-image.png" alt="sample flower image">
+                    <h5 class="card-title">Lily Blossom</h5>
+                    <h5 class="card-price">20 USD</h5>
+                    <button class="primary-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./assets/sample-flower-image.png" alt="sample flower image">
+                    <h5 class="card-title">Lily Blossom</h5>
+                    <h5 class="card-price">20 USD</h5>
+                    <button class="primary-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./assets/sample-flower-image.png" alt="sample flower image">
+                    <h5 class="card-title">Lily Blossom</h5>
+                    <h5 class="card-price">20 USD</h5>
+                    <button class="primary-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./assets/sample-flower-image.png" alt="sample flower image">
+                    <h5 class="card-title">Lily Blossom</h5>
+                    <h5 class="card-price">20 USD</h5>
+                    <button class="primary-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./assets/sample-flower-image.png" alt="sample flower image">
+                    <h5 class="card-title">Lily Blossom</h5>
+                    <h5 class="card-price">20 USD</h5>
+                    <button class="primary-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./assets/sample-flower-image.png" alt="sample flower image">
+                    <h5 class="card-title">Lily Blossom</h5>
+                    <h5 class="card-price">20 USD</h5>
+                    <button class="primary-btn">ADD TO CART</button>
+                </div>
+                <div class="plants-card">
+                    <img src="./assets/sample-flower-image.png" alt="sample flower image">
+                    <h5 class="card-title">Lily Blossom</h5>
+                    <h5 class="card-price">20 USD</h5>
+                    <button class="primary-btn">ADD TO CART</button>
+                </div>
+                
+
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
