plants lover section added

--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
             </div>
 
         </section>
+
+        <section class="plants-lover container">
+            <img src="./assets/flower-store.png" alt="">
+            <div class="plants-lover-text">
+                <h3 class="section-title">Flower & Plants Lover</h3>
+                <ul class="section-description">
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
