join section added

--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
                 </ul>
             </div>
         </section>
+
+        <section class="join">
+            <h3 class="section-title">Join the colorful Bunch</h3>
+            <form action="">
+                <input class="email" type="email" placeholder="Write email">
+                <input class="subscribe-btn" type="button" value="Subscribe">
+            </form>
+        </section>
     </main>
 </body>
 </html>
