--- a/index.html
+++ b/index.html
@@ -122,5 +122,32 @@
             </form>
         </section> 
     </main>
+
+    <footer class="container">
+        <div class="footer-logo">
+            <img src="./assets/logo.png" alt="">
+            <p class="section-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+        </div>
+        <div class="footer-links">
+            <ul>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">Home</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">About Us</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">Blog</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">FAQ</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">Contact Us</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">Features</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">Pricing</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">Privacy Policy</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">Terms of Service</a></li>
+                <li class="footer-list"><a class="footer-link text-gray-100" href="#">Help Center</a></li>
+            </ul>
+        </div>
+        <div class="footer-icons">
+            <img src="./assets/icon-linkedin.png" alt="Linkedin icon">
+            <img src="./assets/icon-twitter.png" alt="Twitter icon">
+            <img src="./assets/icon-facebook.png" alt="facebook icon">
+            <img src="./assets/icon-youtube.png" alt="Youtube icon">
+        </div>   
+    </footer>
 </body>
 </html>
